Added new application called httpclient - simple Winsock HTTP client to send a GET to a given server/port/url combination. Updated build system to include new httpclient project. Updated build.bat to allow use to indicate the Microsoft Visual Studio Code version to use on the command line, otherwise the default value "Visual Studio 15 2017" will be used.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,3 +11,4 @@ add_subdirectory (sample)
 add_subdirectory (dirlist)
 add_subdirectory (proclist)
 add_subdirectory (rot13)
+add_subdirectory (httpclient)
