Added new application wininetclient. A simple HTTP client application that will perform a GET on the host/url indicated. This application uses the wininet library rather than the winsock library.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,3 +12,4 @@ add_subdirectory (dirlist)
 add_subdirectory (proclist)
 add_subdirectory (rot13)
 add_subdirectory (httpclient)
+add_subdirectory (wininetclient)
